# GooseOS

./: .gitignore  OVMF_VARS_4M.fd  cross-file.txt  limine.conf  meson.build  myos.iso  readme.md
kernel/: init.cpp  math.cpp  meson.build  panic.cpp
kernel/arch/x86_64/: init.cpp  linker.ld
kernel/arch/x86_64/acpi/: init.cpp
kernel/arch/x86_64/apic/: init.cpp  ioapic.cpp  lapic.cpp
kernel/arch/x86_64/boot/: entry.asm  framebuffer.cpp  limine.cpp  ramdisk.cpp
kernel/arch/x86_64/console/: console.cpp  serial.cpp
kernel/arch/x86_64/cpu/: cpu.asm  gdt.cpp  idt.cpp  int.asm  int.cpp
kernel/arch/x86_64/include/: spinlock.hpp
kernel/arch/x86_64/include/acpi/: acpi.hpp
kernel/arch/x86_64/include/apic/: apic.hpp
kernel/arch/x86_64/include/console/: font-8x8.h
kernel/arch/x86_64/include/cpu/: core.hpp  gdt.hpp  idt.hpp  int.hpp
kernel/arch/x86_64/include/io/: ports.hpp
kernel/arch/x86_64/include/limine/: limine.h
kernel/arch/x86_64/io/: ports.asm
kernel/arch/x86_64/mem/: pmm.cpp  vmm.cpp
kernel/arch/x86_64/misc/: cpuid.cpp
kernel/include/: arch.hpp  core.hpp  kconfig.hpp  math.hpp  types.hpp  utils.hpp
kernel/include/blockdev/: blockdevice.hpp  ramdisk.hpp
kernel/include/boot/: framebuffer.hpp
kernel/include/console/: console.hpp  serial.hpp
kernel/include/cpu/: core.hpp  idt.hpp
kernel/include/input/: keyboard.hpp
kernel/include/mem/: pmm.hpp  vmm.hpp
kernel/input/: keyboard.cpp
toolchain/: create-limine.sh
toolchain/tmp/img_root/boot/: kernel  kernel.elf
